# star-types

./: .gitignore  README.md  dvc.yaml  makefile  params.yaml  plots.html  predicted.csv  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  data.csv.dvc
metrics/: kneighbors_scores.json  logistic regression_scores.json  random forest_scores.json  scores.json
model/: .gitignore  KNeighbors_0.273_model.pkl  Logistic Regression_0.337_model.pkl  Random Forest_5.978_model.pkl  Support Vector Machine_0.271_model.pkl  final_model.pkl
plots/: predicted.csv
predicted/: predictions.csv
reports/metrics/: kneighbors_scores.json  logistic regression_scores.json  random forest_scores.json  scores.csv  support vector machine_scores.json
src/: Exploratory Analysis.ipynb  evaluate.py  plot_roc_auc.py  plots.py  prepare.py  star_type_predictions.py  test.py  train.py  transform.py
src/.ipynb_checkpoints/: Exploratory Analysis-checkpoint.ipynb
star_types/: parameters.py  plots.py  prepare.py  star_type_predictions.py  train.py
star_types/.ipynb_checkpoints/: Exploratory Analysis-checkpoint.ipynb
tests/: test_star_types.py
